--- a/Cricket_Scorecard.ipynb
+++ b/Cricket_Scorecard.ipynb
@@ -1203,7 +1203,7 @@
         "id": "rNcW-lbws1RY"
       },
       "source": [
-        "# Find out the top three venues which hosted the greatest number of matches.\n"
+        "# Top three venues which hosted the greatest number of matches.\n"
       ]
     },
     {
@@ -1509,7 +1509,7 @@
         "id": "H-ThtWVAIal3"
       },
       "source": [
-        "# Find out the pair of cricket teams who played the most number of T20 matches against each other"
+        "# The pair of cricket teams who played the most number of T20 matches against each other"
       ]
     },
     {
